2006-07-31  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * Back from holiday.
    * olive.glade: separated branch and checkout dialogs (Fixed: #54019)
    * olive/frontend/gtk/checkout.py: file added respectively
    * olive/frontend/gtk/branch.py: removed checkout options
    * olive/frontend/gtk/handler.py: modified handler names + added checkout
    * olive/frontend/gtk/push.py: window gets properly resized (Fixed: #54676)

2006-07-25  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive-gtk: display error if python 2.4 not available (Mario Đanić)
      (Fixed: #54014)
    * olive-gtk: display error if pygtk2 (and glade) not available (Mario Đanić)
      (Fixed: #54013)

2006-07-24  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/push.py: display number of pushed revisions
    * olive.glade: improvements to the Commit dialog
    * olive/frontend/gtk/commit.py: merged Jelmer Vernooij's integration branch
      and some code from bzr-gtk (select files to commit)
    * TODO: added some wishlist stuff

2006-07-21  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/olive.glade: some UI refreshment (push, remove and commit dialog)
    * olive/frontend/gtk/push.py: implemented 'push' functionality
    * olive/frontend/gtk/commit.py: implemented 'commit' functionality
    * olive/frontend/gtk/remove.py: implemented 'remove' functionality
    * olive/frontend/gtk/add.py: implemented 'add' functionality
    * olive/frontend/gtk/handler.py: implemented 'init' functionality
    * olive/backend/fileops.py: added recursive mode to add(), added
      NotBranchError exception to add() and remove()

2006-07-20  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/__init__.py: implemented OliveCommunication.refresh_right()
    * olive/frontend/gtk/handler.py: implemented browsing in the file list
    * olive/backend/fileops.py: tweaked status() (to get proper status in fact)
